feat: Replaced usage of jAsyncAPI by the new springwolf-asyncapi module (#523)
* feat: Replaced usage of jAsyncAPI by the new springwolf-asyncapi module

We migrate from jAsyncAPI, with support for AsyncAPI v2, to the new SpringWolf-AsyncAPI module, which supports AsyncAPI v3.

This PR is only a first step. Plenty of tests are still not working and others are partially commented.

Please take a look to the multiple FIXMEs in the code